--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="main.css" media="screen" title="no title">
   </head>
   <body>
+    <main>
+      <ul class="searchResults">
+      </ul>
+    </main>
+
     <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
   </body>
