--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETSY Search</title>
-    <link rel="stylesheet" href="main.css" media="screen" title="no title">
+    <link rel="stylesheet" href="styles/main.css" media="screen" title="no title">
   </head>
   <body>
+    <nav class="searchBar">
+    </nav>
     <main>
       <ul class="searchResults">
       </ul>
     </main>
-
     <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
   </body>
