--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETSY Search</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" media="screen" />
-    <link rel="stylesheet" href="styles/main.css" media="screen">
+    <link rel="stylesheet" href="styles/main.css" media="screen" />
   </head>
   <body>
     <nav class="searchBar">
